P3/data/namespc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-cd-spac

---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
