P3/data/argoservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: argoserv
  namespace: argocd
spec:
  selector:
    app: app3
  ports:
  - port:  8888
    targetPort: 8888
    protocol: TCP
