P3/data/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep3
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - image: wil42/playground:v2
        name: app3
        # ports:
        #     - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: service3
  namespace: dev
spec:
  selector:
    app: app3
  ports:
  - port:  8888
    targetPort: 8888
    protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p3-ingress
  namespace: dev
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
  

spec:
  rules:
  # - host: app1.com
  #   http:
  #     paths:
  #       - path: /
  #         pathType: Prefix
  #         backend:
  #           service:
  #             name: service3
  #             port:
  #               number: 8888
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service3
              port:
                number: 8888
